# cert-uefi-support

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pyblish.yml
uefi_support/: Cab.pyi  EfiCompressor.c  EfiCompressor.pyi  __init__.py  huffman.py
