[project]
name = "cert-uefi-support"
authors = [{ name = "CERT Threat Analysis Team", email = "cert@cert.org"}]
description = "A package for decompressing file formats found in UEFI distributions"
readme = {file="README.md", content-type="text/markdown"}
dynamic = ["version"]
keywords = ["uefi", "firmware", "uefi-decompression", "support-tools"]
license = { file = "LICENSE.md" }
license-files = ["LICENSE.md"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: System :: Hardware :: UEFI",
]

# Explicitly tell setuptools NOT to auto-discover
[tool.setuptools]
packages = ["uefi_support"]

[tool.setuptools.package-dir]
uefi_support = "uefi_support"

# Include non-Python files like huff11.bin
[tool.setuptools.package-data]
uefi_support = ["huff11.bin"]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/cmu-sei/cert-uefi-support"
Repository = "https://github.com/cmu-sei/cert-uefi-support"

#version control uisng git tags
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
